--- a/sales.html
+++ b/sales.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sales</title>
 </head>
+
 <body>
 
+    <head>
+        <a href="index.html">Home</a>
+    </head>
+
+    <div id="seattleHeader">
+
+
+
+
+    </div>
 
 
 
 
 
 
-    
+
     <script src="js/app.js"></script>
 </body>
+
 </html>
