--- a/sales.html
+++ b/sales.html
@@ -9,19 +9,14 @@
     <link rel="stylesheet" href="css/style.css">   
     <title>Sales</title>
 </head>
-
 <body>
 
     <head>
         <a href="index.html">Home</a>
+        <h1>Cookie Sales Page</h1>
     </head>
 
-    <div id="cookieData">
-
-
-
-
-    </div>
+    <div id="cookieData"></div>
 
 
 
