Created basic structure to my home page before styling

--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
+
 <body>
-    <a href="sales.html">Sales</a>
-    <h1>Salmon Cookies Project</h1>
-    <img src="img/salmon.png"
+    <header>
+        <nav>
+            <a href="#"><img src="img/salmon.png" alt="logo"></a>
+            <ul>
+                <li><a href="sales.html">Sales</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Salmon Cookies Project</h1>
+
+        <article>
+            <!-- Location with addresses -->
+            <section>
+                <h3>Our Locations</h3>
+                <ul>
+                    <li>Seattle</li>
+                    <li>Tokyo</li>
+                    <li>Dubai</li>
+                    <li>Paris</li>
+                    <li>Lima</li>
+                </ul>
+            </section>
+
+            <!-- Hours Open -->
+            <section>
+                <h3>Hours of Operations</h3>
+                <p>Monday - Friday: 6am - 7pm</p>
+            </section>
+
+            <!-- Contact Information -->
+            <section>
+                <h3>Contact Us!</h3>
+                <ul>
+                    <li>Email: pat@salmoncookies.com</li>
+                    <li>Phone: (202)555-0168</li>
+                    <li>Fax: 123-456-7890</li>
+                </ul>
+            </section>
+
+        </article>
+    </main>
+    <!-- Social Media Icons -->
+    <footer>
+        <h3>Connect With Us</h3>
+        <a href="#"><img src="#" alt="Facebook"></a>
+        <a href="#"><img src="#" alt="Instagram"></a>
+        <a href="#"><img src="#" alt="Twitter"></a>
+    </footer>
 
 
 
@@ -17,6 +68,13 @@
 
 
 
-    <!-- <script src="js/app.js"></script> -->
+
+
+
+
+
+
+    <script src="js/app.js"></script>
 </body>
+
 </html>
