Started to add simple CSS-styling to home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
 </head>
 
@@ -24,6 +27,15 @@
         <h1>Salmon Cookies Project</h1>
 
         <article>
+            <section>
+                <img src="img/family.jpg" alt="Family">
+                <img src="img/chinook.jpg" alt="Chinook">
+                <img src="img/cutter.jpg" alt="Cutter">
+                <img src="img/fish.jpg" alt="Fish">
+                <img src="img/frosted-cookie.jpg" alt="Frosted Cookie">
+                <img src="img/shirt.jpg" alt="Merch">
+            </section>
+
             <!-- Location with addresses -->
             <section>
                 <h3>Our Locations</h3>
@@ -57,9 +69,9 @@
     <!-- Social Media Icons -->
     <footer>
         <h3>Connect With Us</h3>
-        <a href="#"><img src="#" alt="Facebook"></a>
-        <a href="#"><img src="#" alt="Instagram"></a>
-        <a href="#"><img src="#" alt="Twitter"></a>
+        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
     </footer>
 
 
