Worked on the footer element of my home page

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
     <!-- Social Media Icons -->
     <footer>
         <h3>Connect With Us</h3>
-        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+        <section>
+            <a href="#"><img src="img/facebook.png" alt="Facebook" width="50" height="50"></a>
+            <a href="#"><img src="img/instagram.png" alt="Instagram" width="50" height="50"></a>
+            <a href="#"><img src="img/twitter.png" alt="Twitter" width="50" height="50"></a>
+        </section>
     </footer>
 
 
