worked on the main element of my webpage

--- a/index.html
+++ b/index.html
@@ -27,24 +27,59 @@
         <h1>Salmon Cookies Project</h1>
 
         <article>
+            <!-- Hero Image -->
             <section>
-                <img src="img/family.jpg" alt="Family">
-                <img src="img/chinook.jpg" alt="Chinook">
-                <img src="img/cutter.jpg" alt="Cutter">
-                <img src="img/fish.jpg" alt="Fish">
-                <img src="img/frosted-cookie.jpg" alt="Frosted Cookie">
-                <img src="img/shirt.jpg" alt="Merch">
+                <img src="img/family.jpg" alt="Family" width="480" height="300">
+                <div>
+                    <h3>About Us</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor laudantium ullam ipsam
+                        dignissimos
+                        magnam, distinctio, sequi adipisci amet neque ratione eos, eveniet placeat accusantium. Amet
+                        consectetur ea blanditiis dolorum quis!
+                        Voluptatem explicabo modi vel? Veritatis eum incidunt, cumque accusantium impedit dolorem
+                        deleniti
+                        illum aut nihil sit alias dolores esse, assumenda nobis voluptatum necessitatibus quia
+                        voluptatem
+                        autem illo quod at corporis!
+                        Maiores distinctio quidem, a aspernatur unde quia sequi incidunt eveniet recusandae neque in
+                        perferendis sint animi voluptas. Illo iusto commodi voluptatem pariatur? Id, omnis nihil. Harum
+                        temporibus nihil vitae recusandae!
+                        Cumque neque architecto odio? Dolore rerum ratione ab deserunt, consectetur atque quam facilis.
+                        Alias dolorum natus quasi officia non deserunt cumque expedita tempora incidunt nemo? Cumque
+                        unde
+                        praesentium quam vero.
+                        Placeat voluptate, iste magnam ad accusamus ex sapiente reiciendis aspernatur, harum minus
+                        consectetur a incidunt explicabo assumenda, porro eius. Ullam doloremque quam vel soluta
+                        suscipit?
+                        Numquam, perspiciatis deserunt! Iure, quibusdam. temporibus nihil vitae recusandae!
+                        Cumque neque architecto odio? Dolore rerum ratione ab deserunt, consectetur atque quam facilis.
+                        Alias dolorum natus quasi officia non deserunt cumque expedita tempora incidunt nemo? Cumque
+                        unde
+                        praesentium quam vero.
+                        Placeat voluptate, iste magnam ad accusamus ex sapiente reiciendis aspernatur, harum minus
+                        consectetur a incidunt explicabo assumenda, porro eius. Ullam doloremque quam vel soluta
+                        suscipit?
+                        Numquam, perspiciatis deserunt! Iure, quibusdam</p>
+                </div>
+            </section>
+            <section>
+                <img src="img/cutter.jpg" alt="Cutter" width="200" height="275">
+                <img src="img/fish.jpg" alt="Fish" width="200" height="275">
+                <img src="img/frosted-cookie.jpg" alt="Frosted Cookie" width="200" height="275">
+                <img src="img/shirt.jpg" alt="Merch" width="200" height="275">
+                <img src="img/chinook.jpg" alt="Chinook" width="250" height="150">
             </section>
 
             <!-- Location with addresses -->
             <section>
                 <h3>Our Locations</h3>
                 <ul>
-                    <li>Seattle</li>
-                    <li>Tokyo</li>
-                    <li>Dubai</li>
-                    <li>Paris</li>
-                    <li>Lima</li>
+                    <ul>
+                    <li>Seattle - Adress</li>
+                    <li>Tokyo - Adress</li>
+                    <li>Dubai - Adress</li>
+                    <li>Paris - Adress</li>
+                    <li>Lima - Adress</li>
                 </ul>
             </section>
 
@@ -70,9 +105,12 @@
     <footer>
         <h3>Connect With Us</h3>
         <section>
-            <a href="#"><img src="img/facebook.png" alt="Facebook" width="50" height="50"></a>
-            <a href="#"><img src="img/instagram.png" alt="Instagram" width="50" height="50"></a>
-            <a href="#"><img src="img/twitter.png" alt="Twitter" width="50" height="50"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook" width="50"
+                    height="50"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram" width="50"
+                    height="50"></a>
+            <a href="https://twitter.com/home" target="_blank"><img src="img/twitter.png" alt="Twitter" width="50"
+                    height="50"></a>
         </section>
     </footer>
 
