Finished footer element

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 <h3>Our Locations</h3>
                 <ul>
                     <ul>
-                    <li>Seattle - Adress</li>
-                    <li>Tokyo - Adress</li>
-                    <li>Dubai - Adress</li>
-                    <li>Paris - Adress</li>
-                    <li>Lima - Adress</li>
+                    <li>Seattle - 85 Pike St, Seattle, WA 98101</li>
+                    <li>Tokyo - Kitayama, Fujinomiya City, Shizuoka 418-0112</li>
+                    <li>Dubai - Millennium Airport Hotel Dubai, Airport Road, Casablanca Street, Dubai, DU</li>
+                    <li>Paris - Champ de Mars, Paris, Ile de France 75007</li>
+                    <li>Lima - Jirón Capac Yupanqui 1089, Jesús María 15072</li>
                 </ul>
             </section>
 
@@ -89,15 +89,7 @@
                 <p>Monday - Friday: 6am - 7pm</p>
             </section>
 
-            <!-- Contact Information -->
-            <section>
-                <h3>Contact Us!</h3>
-                <ul>
-                    <li>Email: pat@salmoncookies.com</li>
-                    <li>Phone: (202)555-0168</li>
-                    <li>Fax: 123-456-7890</li>
-                </ul>
-            </section>
+
 
         </article>
     </main>
@@ -112,6 +104,16 @@
             <a href="https://twitter.com/home" target="_blank"><img src="img/twitter.png" alt="Twitter" width="50"
                     height="50"></a>
         </section>
+
+                    <!-- Contact Information -->
+                    <section>
+                        <h3>Contact Us!</h3>
+                        <ul>
+                            <li>Email: pat@salmoncookies.com</li>
+                            <li>Phone: (202)555-0168</li>
+                            <li>Fax: 123-456-7890</li>
+                        </ul>
+                    </section>
     </footer>
 
 
