--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Condensed&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
 </head>
 
@@ -19,12 +20,14 @@
             <a href="#"><img src="img/salmon.png" alt="logo"></a>
             <ul>
                 <li><a href="sales.html">Sales</a></li>
+                <li><a href="sales.html">Merchandise</a></li>
+                <li><a href="sales.html">Order Now</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Salmon Cookies Project</h1>
+        <h1>Pat's Salmon Cookies</h1>
 
         <article>
             <!-- Hero Image -->
@@ -75,12 +78,12 @@
                 <h3>Our Locations</h3>
                 <ul>
                     <ul>
-                    <li>Seattle - 85 Pike St, Seattle, WA 98101</li>
-                    <li>Tokyo - Kitayama, Fujinomiya City, Shizuoka 418-0112</li>
-                    <li>Dubai - Millennium Airport Hotel Dubai, Airport Road, Casablanca Street, Dubai, DU</li>
-                    <li>Paris - Champ de Mars, Paris, Ile de France 75007</li>
-                    <li>Lima - Jirón Capac Yupanqui 1089, Jesús María 15072</li>
-                </ul>
+                        <li>Seattle - 85 Pike St, Seattle, WA 98101</li>
+                        <li>Tokyo - Kitayama, Fujinomiya City, Shizuoka 418-0112</li>
+                        <li>Dubai - Millennium Airport Hotel Dubai, Airport Road, Casablanca Street, Dubai, DU</li>
+                        <li>Paris - Champ de Mars, Paris, Ile de France 75007</li>
+                        <li>Lima - Jirón Capac Yupanqui 1089, Jesús María 15072</li>
+                    </ul>
             </section>
 
             <!-- Hours Open -->
@@ -105,15 +108,15 @@
                     height="50"></a>
         </section>
 
-                    <!-- Contact Information -->
-                    <section>
-                        <h3>Contact Us!</h3>
-                        <ul>
-                            <li>Email: pat@salmoncookies.com</li>
-                            <li>Phone: (202)555-0168</li>
-                            <li>Fax: 123-456-7890</li>
-                        </ul>
-                    </section>
+        <!-- Contact Information -->
+        <section>
+            <h3>Contact Us!</h3>
+            <ul>
+                <li>Email: pat@salmoncookies.com</li>
+                <li>Phone: (202)555-0168</li>
+                <li>Fax: 123-456-7890</li>
+            </ul>
+        </section>
     </footer>
 
 
