--- a/sales.html
+++ b/sales.html
@@ -6,17 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Condensed&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">   
     <title>Sales</title>
 </head>
 <body>
 
-    <head>
-        <a href="index.html">Home</a>
-        <h1>Cookie Sales Page</h1>
-    </head>
+    <header>
+        <nav>
+            <a href="#"><img src="img/salmon.png" alt="logo"></a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sales.html">Merchandise</a></li>
+                <li><a href="sales.html">Order Now</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+<h1>Pat's Sales Chart</h1>
 
-    <div id="cookieData"></div>
+
+        <div id="cookieData"></div>
+
+        <h1>Pat's Sales Chart</h1>
+
+
+
+
+    </main>
+    <footer>
+        <h3>Connect With Us</h3>
+        <section>
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook" width="50"
+                    height="50"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram" width="50"
+                    height="50"></a>
+            <a href="https://twitter.com/home" target="_blank"><img src="img/twitter.png" alt="Twitter" width="50"
+                    height="50"></a>
+        </section>
+
+        <!-- Contact Information -->
+        <section>
+            <h3>Contact Us!</h3>
+            <ul>
+                <li>Email: pat@salmoncookies.com</li>
+                <li>Phone: (202)555-0168</li>
+                <li>Fax: 123-456-7890</li>
+            </ul>
+        </section>
+    </footer>
+    
 
 
 
