--- a/sales.html
+++ b/sales.html
@@ -31,12 +31,53 @@
 
         <div id="cookieData"></div>
 
-        <h1>Pat's Sales Chart</h1>
+        <aside>
+            <form id="cookieForm">
+              <fieldset>
+                <legend>Add a Store</legend>
+                <!-- location, min, max, avg-->
+                <label>Store Location:
+                  <input type="text" name="storeLocation">
+                </label>
+                <label>Minimum Customers Per Hour:
+                  <input type="number" name="minCustomer">
+                </label>
+                <label>Maximum Customers Per Hour:
+                    <input type="number" name="maxCustomer">
+                  </label>
+                  <label>Average Cookies Sold Per Customer:
+                    <input type="number" name="avgCookie">
+                  </label>
+              </fieldset>
+              <button type="submit">Add Store</button>
+            </form>
+          </aside>
+
+
+
+
+
+
+
+
 
 
 
 
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
         <h3>Connect With Us</h3>
         <section>
