Finished JS functionality to my table

--- a/sales.html
+++ b/sales.html
@@ -37,16 +37,16 @@
                 <legend>Add a Store</legend>
                 <!-- location, min, max, avg-->
                 <label>Store Location:
-                  <input type="text" name="storeLocation">
+                  <input type="text" name="storeLocation" required>
                 </label>
                 <label>Minimum Customers Per Hour:
-                  <input type="number" name="minCustomer">
+                  <input type="number" name="minCustomer" required>
                 </label>
                 <label>Maximum Customers Per Hour:
-                    <input type="number" name="maxCustomer">
+                    <input type="number" name="maxCustomer"required>
                   </label>
                   <label>Average Cookies Sold Per Customer:
-                    <input type="number" name="avgCookie">
+                    <input type="number" name="avgCookie"required>
                   </label>
               </fieldset>
               <button type="submit">Add Store</button>
