Brushed up my styling and my README file for Lab: 10b

--- a/sales.html
+++ b/sales.html
@@ -37,16 +37,16 @@
                 <legend>Add a Store</legend>
                 <!-- location, min, max, avg-->
                 <label>Store Location:
-                  <input type="text" name="storeLocation" required>
+                  <input type="text" name="storeLocation" placeholder="Enter Location Here" required>
                 </label>
                 <label>Minimum Customers Per Hour:
-                  <input type="number" name="minCustomer" required>
+                  <input type="number" name="minCustomer" placeholder="Enter Minimum Here" required>
                 </label>
                 <label>Maximum Customers Per Hour:
-                    <input type="number" name="maxCustomer"required>
+                    <input type="number" name="maxCustomer" placeholder="Enter Maximum Here" required>
                   </label>
                   <label>Average Cookies Sold Per Customer:
-                    <input type="number" name="avgCookie"required>
+                    <input type="number" name="avgCookie" placeholder="Enter Average Cookie Sale Here" required>
                   </label>
               </fieldset>
               <button type="submit">Add Store</button>
